[package]
name = "mergelog"
description = "Magically merge multiple changelog files into one"
authors = ["Ethan Uppal"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"

[dependencies]
argh = "0.1.13"
miette = { version = "7.5.0", features = ["fancy", "syntect-highlighter"] }
url = "2.5.4"
reqwest = { version = "0.12.12", features = ["blocking"] }
indicatif = "0.17.11"
serde_json = "1.0.138"
camino = "1.1.9"
comrak = "0.35.0"
owo-colors = "4.1.0"
edit-distance = "2.1.3"

[profile.dev.package.backtrace]
opt-level = 3
